--- a/index.html
+++ b/index.html
@@ -1,55 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg menu">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="images/logo.png" alt="logo">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="images/logo.png" alt="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item menu__li">
+            <a class="nav-link menu__a active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item menu__li">
+            <a class="nav-link menu__a" href="#">Services</a>
+          </li>
+          <li class="nav-item menu__li">
+            <a class="nav-link menu__a" href="#">Testimonials</a>
+          </li>
+          <li class="nav-item menu__li">
+            <a class="nav-link menu__a" href="#">Faq</a>
+          </li>
+          <li class="nav-item menu__li">
+            <a class="nav-link menu__a" href="#">Portfolio</a>
+          </li>
+          </li>
+          <li class="nav-item menu__li">
+            <a class="nav-link menu__a">Contact</a>
+          </li>
+        </ul>
+        <button type="button" class="rounded-pill btn-rounded">
+          +111111111111
+          <span class="btn-rounded__span">
+            <i class="fas fa-phone-alt"></i>
+          </span>
+        </button>
+      </div>
+    </div>
+  </nav>
+
+  <!-- INTRO -->
+
+  <section id="home" class="intro-section">
+    <div class="container">
+      <div class="row align-items-center text-white">
+        <div class="col-md-6 intros text-start">
+          <h1 class="display-2">
+            <span class="display-2--intro">Hey!, I'm Bootstrap</span>
+            <span class="display-2--description lh-base">
+              this is a multi-purpose responsive layout created with bootstrap v5.
+              (here your can place your description text)
+            </span>
+          </h1>
+          <button type="button" class="rounded-pill btn-rounded">Get in Touch
+            <span><i class="fas fa-arrow-right"></i></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <li class="nav-item menu__li">
-                <a class="nav-link menu__a active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item menu__li">
-                <a class="nav-link menu__a" href="#">Services</a>
-              </li>
-              <li class="nav-item menu__li">
-                <a class="nav-link menu__a" href="#">Testimonials</a>
-              </li>
-              <li class="nav-item menu__li">
-                <a class="nav-link menu__a" href="#">Faq</a>
-              </li>
-              <li class="nav-item menu__li">
-                <a class="nav-link menu__a" href="#">Portfolio</a>
-              </li>
-              </li>
-              <li class="nav-item menu__li">
-                <a class="nav-link menu__a">Contact</a>
-              </li>
-            </ul>
-            <button type="button" class="rounded-pill btn-rounded">
-              +111111111111
-              <span class="btn-rounded__span">
-                <i class="fas fa-phone-alt"></i>
-              </span>
-            </button>
-          </div>
         </div>
-      </nav>
-    
-    <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+        <div class="col-md-6 intros">
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
