--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/fontawesome.css">
+  <link rel="stylesheet" href="assets/vendors/glightbox/css/glightbox.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -76,7 +77,7 @@
         <div class="col-md-6 intros text-end">
           <div class="video-box">
             <img src="images/arts/intro-section-illustration.png" alt="video">
-            <a href="#" class="position-absolute top-50 start-50 translate-middle">
+            <a href="#" class="glightbox position-absolute top-50 start-50 translate-middle">
               <span class="video-box-icon">
                 <i class="fas fa-play-circle"></i>
               </span> 
@@ -90,7 +91,9 @@
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
   </section>
 
+  <script src="assets/vendors/glightbox/js/glightbox.min.js"></script>
   <script src="assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
